Added PostgreSQL for later

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
-    "mkdirp": "^0.5.1"
+    "mkdirp": "^0.5.1",
+    "pg": "^7.6.1"
   },
   "devDependencies": {},
   "scripts": {
