--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
+    "firebase": "^5.9.1",
+    "firebase-admin": "^7.1.1",
     "mkdirp": "^0.5.1",
     "pg": "^7.6.1"
   },
