Finally migrated to new home. Merging branches

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "A Discord bot for Lady Goggle's Discord server \"Goggles' Starry Night.\"",
-  "main": "main.js",
+  "main": "app.js",
   "dependencies": {
     "discord.js": "^11.4.2",
     "express": "^4.16.4",
@@ -13,7 +13,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node main.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC"
