--- a/package.json
+++ b/package.json
@@ -1,30 +1,11 @@
 {
-  "name": "discord-bot",
+  "name": "isabellebot",
   "version": "1.0.0",
-  "description": "A Discord bot for Lady Goggle's Discord server \"Goggles' Starry Night.\"",
+  "description": "",
   "main": "app.js",
-  "dependencies": {
-    "discord.js": "^11.5.1",
-    "express": "^4.17.1",
-    "firebase": "^7.6.0",
-    "firebase-admin": "^8.8.0",
-    "mkdirp": "^0.5.1",
-    "pg": "^7.15.0",
-    "prism-media": "^1.1.0",
-    "ws": "^7.2.1"
-  },
-  "devDependencies": {},
   "scripts": {
     "start": "node app.js"
   },
   "author": "",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zeechapman/isabellebot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/zeechapman/isabellebot/issues"
-  },
-  "homepage": "https://github.com/zeechapman/isabellebot#readme"
+  "license": "ISC"
 }
